--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,27 @@
-asgiref==3.9.2
+# Core Django
 Django==5.2.7
+asgiref==3.9.2
+sqlparse==0.5.3
+tzdata==2025.2
+
+# Static files serving
+whitenoise==6.6.0
+
+# Image processing
+pillow==11.3.0
+
+# Machine Learning
+scikit-learn==1.7.2
 joblib==1.5.2
 numpy==2.3.3
 pandas==2.3.3
-pillow==11.3.0
+scipy==1.16.2
+threadpoolctl==3.6.0
+
+# Utilities
 python-dateutil==2.9.0.post0
 pytz==2025.2
-scikit-learn==1.7.2
-scipy==1.16.2
 six==1.17.0
-sqlparse==0.5.3
-threadpoolctl==3.6.0
-tzdata==2025.2
-whitenoise==6.6.0
+
+# Production extras
+gunicorn==21.2.0
